@@ -1,120 +1,123 @@
 package Chatr.Client;
 
+import Chatr.Controller.Manager;
 import Chatr.Helper.CONFIG;
 import Chatr.Helper.JSONTransformer;
+import Chatr.Model.Chat;
+import Chatr.Model.Message;
+import Chatr.Model.User;
 import Chatr.Server.Transmission;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.java_websocket.client.WebSocketClient;
+import org.java_websocket.drafts.Draft_17;
+import org.java_websocket.handshake.ServerHandshake;
 
+import javax.swing.event.EventListenerList;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintWriter;
-import java.net.ConnectException;
-import java.net.MalformedURLException;
-import java.net.Socket;
-import java.net.URL;
+import java.net.*;
 import java.util.*;
+import java.util.function.Function;
 
 /**
  * Connects to the server and sends / receives Requests
  */
-public class Client {
-	private URL url;
-	private List<Transmission> outBuffer = Collections.synchronizedList(new LinkedList<>());
-	private List<Transmission> inBuffer = Collections.synchronizedList(new LinkedList<>());
+public final class Client {
+
+	private EventListenerList listeners= new EventListenerList();
 	private Logger log = LogManager.getLogger(Client.class);
+	WebSocketClient socketClient;
 
-	protected Client() {
+
+
+	public Client() {
+
 		try {
-			this.url = new URL(CONFIG.SERVER_ADDRESS);
-		} catch (MalformedURLException e) {
-			log.error("malformed URL", e);
+			WebSocketClient webSocketClient= new WebSocketClient(new URI(CONFIG.SERVER_ADDRESS),new Draft_17()) {
+				@Override
+				public void onOpen(ServerHandshake serverHandshake) {
+					log.info("Client open connection");
+				}
+
+				@Override
+				public void onMessage(String s) {
+					Transmission tin = JSONTransformer.fromJSON(s, Transmission.class);
+
+					switch (tin.getRequestType()) {
+						case MESSAGE:
+							switch(tin.getCRUD()){
+								case CREATE:
+									for(ConnectionListener l: listeners.getListeners(ConnectionListener.class))
+										l.notify(new ConnectionEvent(this,tin));
+									break;
+								case READ:
+									for(ConnectionListener l: listeners.getListeners(ConnectionListener.class))
+										l.notify(new ConnectionEvent(this,tin));
+									break;
+							}
+							break;
+						case CONVERSATION:
+							switch (tin.getCRUD()) {
+								case CREATE:
+									//request.setConversationID(ID).setUserIDs((Set<String>) data);
+									break;
+								case READ:
+									for(ConnectionListener l: listeners.getListeners(ConnectionListener.class))
+										l.notify(new ConnectionEvent(this,tin));
+									break;
+								case UPDATE:
+									//request.setConversationID(ID).setUserIDs((Set<String>) data);
+									break;
+								case DELETE:
+									//request.setConversationID(ID);
+									break;
+							}
+							break;
+						case USER:
+								for(ConnectionListener l: listeners.getListeners(ConnectionListener.class))
+									l.notify(new ConnectionEvent(this,tin));
+							break;
+						case USERS:
+							for(ConnectionListener l: listeners.getListeners(ConnectionListener.class))
+								l.notify(new ConnectionEvent(this,tin));
+							break;
+					}
+
+				}
+
+				@Override
+				public void onClose(int i, String s, boolean b) {
+
+				}
+
+				@Override
+				public void onError(Exception e) {
+					log.error("Problem with client: "+e);
+				}
+			};
+
+			socketClient= webSocketClient;
+			socketClient.connect();
 		}
-	}
 
-	/**
-	 * POST request to the Server return response
-	 *
-	 * @return separated lines of the Server's response
-	 */
-	protected Transmission get(Transmission request) {
-		outBuffer.add(request);
-		connect();
-		return filterResponse(request);
-	}
-
-	protected List<Transmission> getMultiple(Transmission request) {
-		outBuffer.add(request);
-		connect();
-		return filterResponses(request);
-	}
-
-	protected List<Transmission> getNotifications() {
-		return inBuffer;
-	}
-
-	//
-
-	/**
-	 * Protocol:
-	 * 1. Send request
-	 * 2. read all lines of the response from the server
-	 * 3. close connection
-	 */
-	private void connect() {
-		try (
-				Socket socket = new Socket(url.getHost(), url.getPort());
-				PrintWriter out = new PrintWriter(socket.getOutputStream(), true);
-				BufferedReader in = new BufferedReader(new InputStreamReader(socket.getInputStream()))
-		) {
-			// Sending
-			for (Transmission data : outBuffer) {
-				String json = JSONTransformer.toJSON(data);
-				out.println(json);
-			}
-			outBuffer.clear();
-			socket.shutdownOutput();
-
-			// Receiving
-			String json;
-			while ((json = in.readLine()) != null) {
-				Transmission data = JSONTransformer.fromJSON(json, Transmission.class);
-				inBuffer.add(data);
-			}
-			socket.shutdownInput();
-		} catch (ConnectException e) {
-			log.error(String.format("unable to connect to %s", url), e);
-		} catch (IOException e) {
-			log.error(e);
+		catch (URISyntaxException e){
+			log.error("Invalid URI: "+ CONFIG.SERVER_ADDRESS);
 		}
+
 	}
 
-	private Transmission filterResponse(Transmission request) {
-		Iterator<Transmission> it = inBuffer.iterator();
-		Transmission tran = null;
-		while (it.hasNext()) {
-			tran = it.next();
-			if (tran.getRequestType() == request.getRequestType() &&
-					tran.getCRUD() == request.getCRUD()) {
-				it.remove();
-				break;
-			}
-		}
-		return tran;
+	public void addListener(ConnectionListener listener){
+		listeners.add(ConnectionListener.class, listener);
 	}
 
-	private List<Transmission> filterResponses(Transmission request) {
-		List<Transmission> filter = new ArrayList<>();
-		Iterator<Transmission> it = inBuffer.iterator();
-		while (it.hasNext()) {
-			Transmission tran = it.next();
-			if (tran.getRequestType() == request.getRequestType() &&
-					tran.getCRUD() == request.getCRUD()) {
-				filter.add(tran);
-				it.remove();
-			}
-		}
-		return filter;
+	public void removeListener(ConnectionListener listener){
+		listeners.remove(ConnectionListener.class, listener);
+	}
+
+	Transmission get(Transmission t){
+		return null;
 	}
 }
